--- a/index.html
+++ b/index.html
@@ -3,13 +3,125 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
+    <div class="w3-half w3-blue-grey w3-container" style="height:700px">
+        <div class="w3-padding-64 w3-center">
+            <h1>About Me</h1>
+            <img src="/w3images/avatar3.png" class="w3-margin w3-circle" alt="Person" style="width:50%">
+            <div class="w3-left-align w3-padding-large">
+                <p>I am an aspiring Software Engineer, I have a Bachelor of Science in Software Design with Cloud Computing.</p>
+                <p>While programming is one of my main passions, I also enjoy gaming and rugby.</p>
+            </div>
+        </div>
+    </div>
 
+    <div class="container">
+        <div class="w3-row-padding w3-center w3-margin-top">
+            <div class="w3-third">
+                <div class="w3-card">
+                    <h3>Languages I speak</h3>
+                    <i class="fa fa-desktop w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
+                    <p>Java</p>
+                    <p>JavaScript</p>
+                    <p>PHP</p>
+                    <p>C#</p>
+                    <p>C++</p>
+                    <p>Python</p>
+                    <p>HTML</p>
+                    <p>mySQL</p>
+                </div>
+            </div>
 
-<script src="script.js"></script>
+            <div class="w3-third">
+                <div class="w3-card">
+                    <h3>Responsive</h3>
+                    <i class="fa fa-desktop w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
+                    <p>Built-in responsiveness</p>
+                    <p>Mobile first fluid grid</p>
+                    <p>Fits any screen sizes</p>
+                    <p>PC Tablet and Mobile</p>
+                </div>
+            </div>
+
+            <div class="w3-third">
+                <div class="w3-card">
+                    <h3>Integrated Development Environments</h3>
+                    <i class="fa fa-desktop w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
+                    <p>Visual Studio Code</p>
+                    <p>IntelliJ IDEA</p>
+                    <p>Eclipse</p>
+                    <p>PC Tablet and Mobile</p>
+                </div>
+            </div>
+
+            <div class="w3-third">
+                <div class="w3-card">
+                    <h3>Integrated Development Environments</h3>
+                    <i class="fa fa-desktop w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
+                    <p>Visual Studio Code</p>
+                    <p>IntelliJ IDEA</p>
+                    <p>Eclipse</p>
+                    <p>PC Tablet and Mobile</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Project Section -->
+    <div class="w3-container w3-padding-32" id="projects">
+        <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">My Projects</h3>
+        
+        <div class="w3-row-padding">
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <div class="w3-display-container">
+                    <div class="w3-display-topleft w3-black w3-padding">Rugby Pro 14 App</div>
+                    <p class="w3-small">A mobile app I created in my second year of college which had four functionalities bottom navigation bar, pop out, login, and card view</p>
+                </div>
+            </div>
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <div class="w3-display-container">
+                    <div class="w3-display-topleft w3-black w3-padding">JDBC Project</div>
+                    <p class="w3-small">A project created using Java and MYSQL using database and a table on video games using CRUD operations.</p>
+                </div>
+            </div>
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <div class="w3-display-container">
+                    <div class="w3-display-topleft w3-black w3-padding">SongSearcher</div>
+                    <p class="w3-small">An app that uses React for the Front-End and Python(Flask) for the backend. It allows users to discover songs and artists using Spotify and YouTube API's, providing both tracks and related videos.</p>
+                </div>
+            </div>
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <div class="w3-display-container">
+                    <div class="w3-display-topleft w3-black w3-padding">Destination A Route Planner App</div>
+                    <!-- Summary -->
+                    <p class="w3-small">A route planner application that helps users plan their travel routes efficiently.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+  
+    <!-- Card Flip Section -->
+    <div class="w3-container w3-padding-32">
+        <h1>Card Flip with Text</h1>
+        <h3>Hover over the image below:</h3>
+
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+                </div>
+                <div class="flip-card-back">
+                    <h1>John Doe</h1> 
+                    <p>Architect & Engineer</p> 
+                    <p>We love that guy</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End of Card Flip Section -->
 </body>
 </html>
